# indirect_view

./: CMakeLists.txt  README.md  indirect_view-config.cmake
include/indirect_view/: cursor_iterator.hpp  segment_iterator.hpp
test/: CMakeLists.txt
test/src/: test_cursor_iterator.cpp  test_cursor_segments.cpp  test_segment_iterator.cpp
